--- a/style/main.css
+++ b/style/main.css
@@ -14,6 +14,12 @@
   --transition-easing: ease-in-out;
 }
 
+body,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: var(--night);
   color: var(--white);
@@ -133,7 +139,20 @@ button:hover {
   height: 200px;
   padding: 15px 25px;
   border-radius: 30px;
-  cursor: pointer;
+}
+#cardText {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  min-height: 150px;
+}
+#difficulty {
+  font-size: 0.5 rem;
+  font-weight: 200;
 }
 #choose {
   background-color: var(--blue);
@@ -141,10 +160,10 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   overflow: hidden;
   width: 300px;
-  height: 75px;
+  height: 100px;
   margin-top: 25px;
   padding: 15px 25px;
   border-radius: 30px;
@@ -152,6 +171,21 @@ button:hover {
 }
 #turn {
   width: 80%;
+}
+#chooseButtons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 100%;
+}
+#wrong {
+  border: none;
+  background-color: var(--red);
+}
+#right {
+  border: none;
+  background-color: var(--green);
 }
 #bubbles {
   width: 80%;
